src/objects/DMSPM__SPM_Forecast__c.object
<CustomObject>
    <fields>
        <fullName>DMSPM__Days_Remaining__c</fullName>
        <formula>DMSPM__To_Date__c - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMSPM__DealmakerID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMSPM__Forecast_Goal__c</fullName>
        <label>Forecast Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMSPM__From_Date__c</fullName>
        <label>From Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DMSPM__Period_Progress__c</fullName>
        <description>A percentage determining how far through period TODAY is</description>
        <formula>IF (
   Today() &lt; DMSPM__From_Date__c, 
   0,
   IF (
       Today() &gt; DMSPM__To_Date__c,
       1,
       IF (
           DMSPM__To_Date__c = DMSPM__From_Date__c,
           1,    
           (Today() - DMSPM__From_Date__c) / (DMSPM__To_Date__c - DMSPM__From_Date__c)
       )
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period Progress</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMSPM__Period_Type__c</fullName>
        <label>Period Type</label>
        <picklist>
            <picklistValues>
                <fullName>Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMSPM__Period__c</fullName>
        <label>Period</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMSPM__Pipeline_Goal__c</fullName>
        <label>Pipeline Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMSPM__SPM_Opportunity_Filter__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>SPM Opportunity Filter</label>
        <referenceTo>DMSPM__SPM_Opportunity_Filter__c</referenceTo>
        <relationshipName>SPM_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMSPM__SPM_Parent_Forecast__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points at any containing forecast, year contains quarters ....</description>
        <inlineHelpText>Points at any containing forecast, year contains quarters ....</inlineHelpText>
        <label>SPM Parent Forecast</label>
        <referenceTo>DMSPM__SPM_Forecast__c</referenceTo>
        <relationshipName>SPM_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMSPM__SPM_Team__c</fullName>
        <label>SPM Team</label>
        <referenceTo>DMSPM__SPM_Team__c</referenceTo>
        <relationshipName>SPM_Forecasts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMSPM__To_Date__c</fullName>
        <label>To Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Dealmaker SPM Forecast</label>
    <nameField>
        <label>SPM Forecast Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dealmaker SPM Forecasts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>